tests/errors/generic_invariant_mismatch.dang
type Box[a] {
  pub value: a
}

pub x: Box[String!]! = Box(1)
